# castagnoli

./: CHANGELOG.md  cabal.project  castagnoli.cabal
.github/workflows/: build.yaml
src/: Crc32c.hs
src/Crc32c/: Table.hs
test/: Main.hs
