cabal-version:   2.2
name:            castagnoli
version:         0.2.0.2
synopsis:        Portable CRC-32C
description:     Portable implementation of CRC-32C.
homepage:        https://github.com/byteverse/castagnoli
bug-reports:     https://github.com/byteverse/castagnoli/issues
license:         BSD-3-Clause
license-file:    LICENSE
author:          Andrew Martin
maintainer:      amartin@layer3com.com
copyright:       2019 Andrew Martin
category:        Data
extra-doc-files: CHANGELOG.md
tested-with:     GHC ==9.4.8 || ==9.6.3 || ==9.8.1

common build-settings
  default-language: Haskell2010
  ghc-options:      -Wall -Wunused-packages

library
  import:          build-settings
  exposed-modules: Crc32c
  other-modules:   Crc32c.Table
  build-depends:
    , base       >=4.12.0.0 && <5
    , byteslice  >=0.1.1    && <0.3
    , primitive  >=0.7      && <0.10

  hs-source-dirs:  src
  ghc-options:     -O2

test-suite test
  import:         build-settings
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:
    , base
    , castagnoli

source-repository head
  type:     git
  location: git://github.com/byteverse/castagnoli.git
